--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -58,6 +58,10 @@ h3 {
   background-color: #009FE3 !important;
 }
 
+.MuiInput-underline:before {
+  border: none !important;
+}
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .logo-elecmetal {
